2007-06-03  Miklos Szeredi <miklos@szeredi.hu>

	* libulockmgr: Work around a kernel bug in recv(), causing it to
	sometimes return zero even if data was available on the socket.

2007-05-29  Miklos Szeredi <miklos@szeredi.hu>

	* lib: optimization: store parent pointer in node instead of
	parent id

2007-05-25  Miklos Szeredi <miklos@szeredi.hu>

	* lib: don't create new thread for each FORGET request.  FORGET
	messages sometimes caused so many threads to be created, that
	process virtual memory space ran out.  Reported by Chris AtLee

2007-05-24  Miklos Szeredi <miklos@szeredi.hu>

	* lib: fix memory leak on thread creation failure in multithreaded
	event loop.  Found by Chris AtLee

2007-05-23  Miklos Szeredi <miklos@szeredi.hu>

	* lowlevel lib: add fuse_reply_iov function, which is similar to
	fuse_reply_buf, but accepts a vector of buffers.  Patch by Roger
	Willcocks

2007-05-21  Miklos Szeredi <miklos@szeredi.hu>

	* Fix Oops or error if a regular file is created with mknod(2) on
	a fuse filesystem.  Kernels 2.6.18 onward are affected.  Thanks to
	J. Cameijo Cerdeira for the report

2007-05-11  Csaba Henk <csaba.henk@creo.hu>

	* libfuse: fix return value of fuse_loop()/fuse_loop_mt().
	Error reported by Csaba Henk, fix by Miklos Szeredi

	* libfuse: fix unlock in flush

	* libfuse: do unlocking on RELEASE+FLUSH
 
2007-05-03  Miklos Szeredi <miklos@szeredi.hu>

	* Released 2.7.0-rc1

2007-05-02  Miklos Szeredi <miklos@szeredi.hu>

	* kernel: sync with mainline:

	* Use invalidate_mapping_pages() if available

	* Fix BUG when invalid file type is supplied in mount. Patch by
	Timo Savola

2007-04-27  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: call umount(8) directly instead of fusermount if
	possible

	* Clean up init script, make it LSB compliant

2007-04-26  Miklos Szeredi <miklos@szeredi.hu>

	* In multithreaded loop, use a semaphore instead of SIGHUP to wake
	up the main thread on umount.  This is more elegant, and works
	even if signals are blocked.
